Prettified stacked column chart

--- a/doe-stack.html
+++ b/doe-stack.html
@@ -11,12 +11,15 @@
 </head>
 
 <body>
-    <p id="motp-ratings">MOTP</p>
-    <p id="mosl-state-ratings">MOSL State</p>
-    <p id="mosl-local-ratings">MOSL Local</p>
+    <div class="center interface">
+        <button id="motp-ratings">MOTP Ratings</button>
+        <button id="mosl-state-ratings">MOSL State Ratings</button>
+        <button id="mosl-local-ratings">MOSL Local Ratings</button>
+    </div>
+    
 
     <script type="text/javascript">
-      makeStack();
+        makeStack();
     </script>
 </body>
 
