--- a/doe.html
+++ b/doe.html
@@ -39,7 +39,7 @@
     <article>
         <p class="question">Tell us about a time you had to understand a problem from a perspective that was different than your own. What did you learn? 500 words or less</p>
         
-        <p class="answer"></p>
+        <p class="answer">The first time I had a significant change of mind was in college. I always gravitated towards the natural sciences and math because the logic of those disciplines appealed to me.  I also grew up in NYC as the child of immigrant parents and was well-schooled in the ethos of <em>the self-made man</em>.  So for a long time, I believed that the outcome of a person's life is almost entirely due to the efforts of that individual.  It all seemed very logical to me that my life was the product of my choices and had little to do with anything else.  But in college, I took a sociology class and that experience profoundly changed how I viewed societal ills like poverty and crime.  I used to believe that the people at the top got there because they worked the hardest, but that implies that the people at the bottom are there because they don't.  I ended up majoring in sociology and learned how powerfully systemic discrimination and inequality can alter the trajectory of a person's life.  So now I am trying to do my part to improve the external conditions of my neighbors' lives so that their internal conditions may one day be all they need to realize their potential.</p>
     </article>
 
     <article>
@@ -103,7 +103,7 @@
 
         <strong>Improvement #1:</strong> I would like to add data labels, markers for mean and median values, and (for an online context) more interactivity and annotations. For example, in the <em>All District Ratings</em> chart, it would be nice if hovering over a column (within a stack) gives you the counts out of the total for that district.  Similarly, it would be useful to have the columns labeled with their actual point values in the <em>District 6 Points</em> chart.  It might also be useful to have additional filters, such as displaying only the teachers with an "Effective" Overall Rating.<br><br>
 
-        <strong>Improvement #2:</strong> A tie between adding different kinds of graphics and making the graphics mobile responsive.  I wanted to add a slopegraph to see how the point values compared between MOSL State and MOSL Local, but I ran out of time.
+        <strong>Improvement #2:</strong> A 3-way tie between refactoring the code, making the graphics mobile responsive, and adding different kinds of graphics.  I wanted to add a slopegraph to see how the point values compared between MOSL State and MOSL Local, but I ran out of time. (I think I would end up refactoring the code first.)
         </p>
     </article>
 
