Added annotations, fixed height error

--- a/doe.html
+++ b/doe.html
@@ -64,18 +64,21 @@
 
         <p class="answer">Please see the 2 sets of column charts below.  The questions and answers continue after the charts.</p>
 
-        <div id="ratings-chart">
+        
         <h1 class="chart-title">All District Ratings</h1>
         <div class="center interface">
             <button id="motp-ratings-percent">MOTP</button>
             <button id="mosl-state-ratings-percent">MOSL State</button>
             <button id="mosl-local-ratings-percent">MOSL Local</button>
         </div>
+        <div id="ratings-chart">
         </div>
 
-        <div id="points-chart">
+        
         <h1 class="chart-title">District 6 Points</h1>
-        <div class="center interface"></div>
+        <p class="chart-annotation">District 6 Average Overall Points: <strong>81.7</strong></p>
+        <p class="chart-annotation">Percent of District 6 Teachers with Overall Rating of <em>Effective</em> or higher: <strong>100%</strong></p>
+        <div id="points-chart">
         </div>
 
         <p class="question">Explain your methodology and choices made. In less than 500 words describe the assumptions you made, why you made them, what design choices you made, and what influenced them.</p>
