Added chart captions

--- a/doe.html
+++ b/doe.html
@@ -73,6 +73,7 @@
         </div>
         <div id="ratings-chart">
         </div>
+        <p class="chart-caption">Each column shows the percent composition of rating categories (highly ineffective through highly effective) on one assessment (MOTP, MOSL State, MOSL Local). For example, District 6 had the following breakdown on the MOTP: 40% Developing, 47% Effective, and 13% Highly Effective.</p>
 
         
         <h1 class="chart-title">District 6 Points</h1>
@@ -80,6 +81,7 @@
         <p class="chart-annotation">Percent of District 6 Teachers with Overall Rating of <em>Effective</em> or higher: <strong>100%</strong></p>
         <div id="points-chart">
         </div>
+        <p class="chart-caption">Each stack in a column represents the results of an assessment: the height corresponds to the point value, while the color represents the rating. The bottom, middle, and top stacks represent the points from the MOTP, MOSL State, and MOSL Local assessments respectively. The total height of a column represents the Overall Points value for an individual teacher. For example, Dossan received 49 points and a rating of <em>Developing</em> on the MOTP (bottom stack) and 15 points and a rating of <em>Effective</em> on both the MOSL State and the MOSL Local (middle and top stacks) for a total of 79 Overall Points.</p>
 
         <p class="question">Explain your methodology and choices made. In less than 500 words describe the assumptions you made, why you made them, what design choices you made, and what influenced them.</p>
 
