Added focus on button

--- a/doe.html
+++ b/doe.html
@@ -123,6 +123,10 @@
     <script type="text/javascript">
         makeRatingsStack("#ratings-chart");
         makePointsStack("#points-chart");
+        
+        window.onload = function() {
+            document.getElementById("motp-ratings-percent").focus();
+        };
     </script>
 </body>
 
