--- a/doe.html
+++ b/doe.html
@@ -108,7 +108,7 @@
 
         <strong>Improvement #1:</strong> I would like to add data labels, markers for mean and median values, and (for an online context) more interactivity and annotations. For example, in the <em>All District Ratings</em> chart, it would be nice if hovering over a column (within a stack) gives you the counts out of the total for that district.  Similarly, it would be useful to have the columns labeled with their actual point values in the <em>District 6 Points</em> chart.  It might also be useful to have additional filters, such as displaying only the teachers with an "Effective" Overall Rating.<br><br>
 
-        <strong>Improvement #2:</strong> A 3-way tie between refactoring the code, making the graphics mobile responsive, and adding different kinds of graphics.  I wanted to add a slopegraph to see how the point values compared between MOSL State and MOSL Local, but I ran out of time. (I think I would end up refactoring the code first.)
+        <strong>Improvement #2:</strong> A 3-way tie between refactoring the code, making the graphics mobile responsive, and adding different kinds of graphics.  I wanted to add a slopegraph to see how the point values compared between MOSL State and MOSL Local, but I ran out of time. Speaking of time, it would be great to see this data with a historical context so that principals can see how their schools and teachers are improving over time.
         </p>
     </article>
 
