--- a/doe.html
+++ b/doe.html
@@ -20,7 +20,7 @@
 
 <body>
 
-    <main>
+    <main id="main">
 
     <section>
     
@@ -126,6 +126,7 @@
         
         window.onload = function() {
             document.getElementById("motp-ratings-percent").focus();
+            document.getElementById("main").focus();
         };
     </script>
 </body>
