--- a/doe.html
+++ b/doe.html
@@ -24,7 +24,7 @@
 
     <section>
     
-    <h1 id="part1">Part 1: Short Answers</h1>
+    <h1 id="part1" tabindex="-1">Part 1: Short Answers</h1>
 
     <article>
         <p class="question">Talk to us about something you’ve helped create. Where did the idea come from? Why does it excite you? What were the highs and lows in the development process? 500 words or less</p>
@@ -126,7 +126,8 @@
         
         window.onload = function() {
             document.getElementById("motp-ratings-percent").focus();
-            window.location.hash = "#part1";
+            // document.getElementById("part1").focus();
+            // window.location.hash = "#part1";
         };
 
 
