Changed dataviz script file

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <script type="text/javascript" src="d3.js"></script>
     <script type="text/javascript" src="d3-selection-multi.js"></script>
-    <script type="text/javascript" src="stack-column.js"></script>
+    <script type="text/javascript" src="dataviz.js"></script>
 </head>
 
 <body>
