--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         </div>
         <div id="ratings-chart">
         </div>
-        <p class="chart-caption">Each column shows the percent composition of rating categories (highly ineffective through highly effective) on one assessment (TP, SP State, SP Local). For example, District 6 had the following breakdown on the TP: 40% Developing, 47% Effective, and 13% Highly Effective.</p>
+        <p class="chart-caption">Each column shows the percent composition of rating categories (highly ineffective through highly effective) on one assessment (TP, SP State, SP Local). For example, District 12 had the following breakdown on the TP: 50% Highly Ineffective, 40% Ineffective, and 10% Developing.</p>
     </article>
 
     <article>
-        <h1 class="chart-title">District 6 Points</h1>
-        <p class="chart-annotation">District 6 Average Overall Points: <strong>81.7</strong></p>
-        <p class="chart-annotation">Percent of District 6 Teachers with Overall Rating of <em>Effective</em> or higher: <strong>100%</strong></p>
+        <h1 class="chart-title">District 12 Points</h1>
+        <p class="chart-annotation">District 12 Average Overall Points: <strong>81.7</strong></p>
+        <p class="chart-annotation">Percent of District 12 Teachers with Overall Rating of <em>Effective</em> or higher: <strong>100%</strong></p>
         <div id="points-chart">
         </div>
         <p class="chart-caption">Each stack in a column represents the results of an assessment: the height corresponds to the point value, while the color represents the rating. The bottom, middle, and top stacks represent the points from the TP, SP State, and SP Local assessments respectively. The total height of a column represents the Overall Points value for an individual teacher. For example, Durian received 49 points and a rating of <em>Developing</em> on the TP (bottom stack) and 15 points and a rating of <em>Effective</em> on both the SP State and the SP Local (middle and top stacks) for a total of 79 Overall Points.</p>
